# CCC-Random-Reversing

./: CMakeLists.txt  Emulator.cpp  Emulator.h  Logic.cpp  MIPS.cpp  README.md  Registers.h  build.sh  code.txt  code.txt.old  move_code_and_test.sh  randomiser.py  uncompiled_asm.md  unrandomised_code.txt
src/: Arithmetic.cpp  CMakeLists.txt  Emulator.cpp  Emulator.h  Execution.cpp  MIPS.cpp  MIPS.h  Memory.cpp  README.md
